--- a/twitter-sentiment/client/main.scss
+++ b/twitter-sentiment/client/main.scss
@@ -1,2 +1,6 @@
 /* CSS declarations go here */
-@import 'node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+body {
+	margin: 0;
+}
+
+@import './deeppurple-amber.css';
