store and display search results

--- a/twitter-sentiment/client/imports/app/app.component.scss
+++ b/twitter-sentiment/client/imports/app/app.component.scss
@@ -58,3 +58,13 @@
 		}
 	}
 }
+
+.search-results-container {
+	mat-list {
+		mat-list-item {
+			.tweet-text {
+				white-space: normal;
+			}
+		}
+	}
+}
