--- a/twitter-sentiment/client/imports/app/app.component.html
+++ b/twitter-sentiment/client/imports/app/app.component.html
@@ -22,3 +22,13 @@
 		</button>
 	</div>
 </form>
+
+<div class="search-results-container mat-typography">
+	<mat-list>
+		<mat-list-item *ngFor="let tweet of searchResults">
+			<img matListAvatar [src]="tweet.user.profile_image_url_https" alt="">
+			<h4 mat-line>{{tweet.user.name}}</h4>
+			<p mat-line class="tweet-text"> {{tweet.full_text}} </p>
+		</mat-list-item>
+	</mat-list>
+</div>
