--- a/twitter-sentiment/client/imports/app/app.component.scss
+++ b/twitter-sentiment/client/imports/app/app.component.scss
@@ -6,12 +6,10 @@
 // to import other Sass files to be included in the output CSS.
 
 .title-container {
+	top: 0;
 	position: absolute;
-	left: calc(50% - 30rem);
-	top: calc(50% - 12rem);
-	// transform: translate(-50%, -50%);
-	width: 60rem;
-	height: 24rem;
+	width: 100%;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-content: space-between;
@@ -60,6 +58,7 @@
 }
 
 .search-results-container {
+	margin: 12rem 20% 0;
 	mat-list {
 		mat-list-item {
 			.tweet-text {
