--- a/twitter-sentiment/client/imports/app/app.component.scss
+++ b/twitter-sentiment/client/imports/app/app.component.scss
@@ -4,66 +4,6 @@
 // styles are for the entire app and not just one component.
 // Additionally, this file can be also used as an entry point
 // to import other Sass files to be included in the output CSS.
-
-.title-container {
-	top: 0;
-	position: absolute;
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-content: space-between;
-	flex-direction: column;
-	.title {
-		text-align: center;
-	}
-	.search-container {
-		width: 40rem;
-		height: 4rem;
-		display: flex;
-		justify-content: center;
-		align-self: center;
-		mat-form-field {
-			flex-grow: 1;
-			input {
-				font-size: xx-large;
-			}
-		}
-		.search-button-container {
-			display: flex;
-			justify-content: center;
-			align-content: center;
-			button {
-				margin-left: 2rem;
-			}
-		}
-	}
-	.twitter-button-container {
-		align-self: center;
-		margin-top: 2rem;
-		button {
-			color: white;
-			background-color: #4AB3F4;
-			&:hover {
-				background-color: #1da1f2;
-			}
-			&[disabled]:hover {
-				background-color: #4AB3F4;
-			}
-		}
-		.username {
-			margin-right: 1rem;
-		}
-	}
-}
-
-.search-results-container {
-	margin: 12rem 20% 0;
-	mat-list {
-		mat-list-item {
-			.tweet-text {
-				white-space: normal;
-			}
-		}
-	}
+.container {
+	margin: 0 20%;
 }
