--- a/twitter-sentiment/client/imports/app/components/results.component.html
+++ b/twitter-sentiment/client/imports/app/components/results.component.html
@@ -1,4 +1,4 @@
-<a class="search-button" routerLink="/" mat-raised-button color="primary"><mat-icon>search</mat-icon></a>
+<button class="search-button" routerLink="/" mat-raised-button color="primary"><mat-icon>search</mat-icon></button>
 
 <div class="search-results-container mat-typography">
 	<mat-list>
