--- a/twitter-sentiment/client/imports/app/components/results.component.html
+++ b/twitter-sentiment/client/imports/app/components/results.component.html
@@ -1,7 +1,7 @@
 <button class="search-button" routerLink="/" mat-raised-button color="primary"><mat-icon>search</mat-icon></button>
 
 <div class="search-results-container mat-typography">
-	<mat-list>
+	<mat-list *ngIf="searchResults">
 		<my-app-tweet *ngFor="let tweet of searchResults" [tweet]="tweet">
 		</my-app-tweet>
 	</mat-list>
