--- a/twitter-sentiment/client/imports/app/components/results.component.html
+++ b/twitter-sentiment/client/imports/app/components/results.component.html
@@ -1,8 +1,11 @@
 <div class="search-results-container mat-typography" [@search]="'in'">
 	<button class="search-button" routerLink="/" mat-raised-button color="primary"><mat-icon>search</mat-icon></button>
+	<div *ngIf="sentimentStats">{{ sentimentStats | json }}</div>
 
-	<mat-list *ngIf="searchResults">
-		<my-app-tweet *ngFor="let tweet of searchResults" [tweet]="tweet">
-		</my-app-tweet>
-	</mat-list>
+	<mat-card>
+		<mat-list *ngIf="searchResults">
+			<my-app-tweet *ngFor="let tweet of searchResults" [tweet]="tweet">
+			</my-app-tweet>
+		</mat-list>
+	</mat-card>
 </div>
